# itec18

./: package-lock.json  package.json
backend/: Cargo.toml
backend/src/: main.rs
backend/src/api/: mod.rs  sessions.rs  structures.rs  users.rs
backend/src/db/: messages.rs  mod.rs  sessions.rs  statics.rs  structures.rs  users.rs
backend/src/security/: mod.rs
frontend/: .env  package-lock.json  package.json
frontend/src/: .Sessions.js.swp  App.js  DisplayFromJson.js  Login.css  Login.js  Main.css  Main.js  Session.js  Sessions.css  Sessions.js  index.js
frontend/src/components/: fisier.json
src/: App.js  Main.js
