[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = {version="4.0", features=["rustls-0_23"]}
actix-files = "0.6"
rustls = "0.23"
tokio-rustls = "0.23"
rustls-pemfile = "2"
serde = {version="1.0.218", features=["serde_derive"]}
uuid = {version="1.15.1", features=["v4"]}
scylla = "1.0.0"
sha2 = "0.10.8"
rand = "0.9.0"
env_logger = "0.11.6"
